# src/shared/docs/swagger.yml
@@ -1,97 +1,119 @@
 openapi: 3.0.0
 info:
   version: '1.1.0'
+  title: Software Finance API
   termsOfService: 'http://swagger.io/terms/'
-  title: incident report
   license:
     name: ISC
   contact:
-    name: Jesus oviedo
+    name: Jesus Oviedo
     email: oviedossj3@gmail.com
-paths:
-  '/products/add':
-    post:
-      tags:
-        - Cart
-      security:
-        - bearerAuth: []
-      summary: Add product to user's cart
-      description: Add a product on the user's cart.
-      operationId: addProduct
-      requestBody:
-        $ref: '#/components/requestBodies/addProductRequest'
-      responses:
-        '200':
-          $ref: '#/components/responses/CartRespose'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-  '/products/remove':
-    post:
-      tags:
-        - Cart
-      security:
-        - bearerAuth: []
-      summary: Remove product to user's cart
-      description: Remove a product on the user's cart.
-      operationId: removeProduct
-      requestBody:
-        $ref: '#/components/requestBodies/removeProductRequest'
-      responses:
-        '200':
-          $ref: '#/components/responses/CartRespose'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-  '/checkout':
-    post:
-      tags:
-        - Cart
-      security:
-        - bearerAuth: []
-      summary: User finish its buys
-      description: User finish its buys.
-      operationId: checkout
-      requestBody:
-        $ref: '#/components/requestBodies/CheckoutRequest'
-      responses:
-        '200':
-          $ref: '#/components/responses/CheckoutRespose'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
 servers:
   - url: https://api.example.com/v1
-    description: Default
+    description: Default server
+paths:
+  /api/register:
+    post:
+      tags:
+        - Authentication
+      summary: Register a new user
+      operationId: registerUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        '201':
+          description: User registered successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegisterResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /api/login:
+    post:
+      tags:
+        - Authentication
+      summary: Login with email and password
+      operationId: loginUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /api/loginOauth:
+    get:
+      tags:
+        - Authentication
+      summary: Initiate Google OAuth login
+      operationId: loginWithGoogle
+      responses:
+        '302':
+          description: Redirect to Google OAuth
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /api/gtoken:
+    get:
+      tags:
+        - Authentication
+      summary: Handle Google OAuth callback
+      operationId: handleGoogleCallback
+      parameters:
+        - name: code
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /api/refresh:
+    get:
+      tags:
+        - Authentication
+      summary: Refresh access token
+      operationId: refreshToken
+      responses:
+        '200':
+          description: Token refreshed successfully
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'Token de acceso actualizado'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 components:
-  requestBodies:
-    addProductRequest:
-      description: Add product to a cart request
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ProductRequest'
-    removeProductRequest:
-      description: Remove product to a cart request
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/DeleteProductRequest'
-    CheckoutRequest:
-      description: checkout request
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/CheckoutRequest'
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   responses:
     Success:
       description: Successful operation
@@ -109,18 +131,6 @@ components:
             $ref: '#/components/schemas/Error'
     InternalServerError:
       description: Internal server error
-    CartRespose:
-      description: Cart response
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/CartResponse'
-    CheckoutRespose:
-      description: it response with a ticket of the buy
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Ticket'
   schemas:
     StandardResponse:
       type: object
@@ -131,76 +141,6 @@ components:
         status:
           type: number
           example: 200
-    CartResponse:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: string
-            example: cartID
-          userId:
-            type: string
-            example: userID
-          products:
-            type: array
-            items:
-              type: object
-              properties:
-                productId:
-                  type: string
-                  example: productId
-                amount:
-                  type: number
-                  example: 10
-          createdAt:
-            type: string
-            example: date
-          updatedAt:
-            type: string
-            example: date
-          paid:
-            type: boolean
-            example: false
-    Ticket:
-      type: object
-      properties:
-        id:
-          type: string
-          example: 123gjx
-        userId:
-          type: string
-          example: bcd123
-        username:
-          type: string
-          example: pepe123
-        transactionDate:
-          type: string
-          example: date
-        total:
-          type: number
-          example: 4231
-        paymentMethod:
-          type: string
-          example: cash
-        products:
-          type: array
-          items:
-            type: object
-            properties:
-              name:
-                type: string
-                example: 'product-A'
-              description:
-                type: string
-                example: this is a good product
-              price:
-                type: number
-                example: 4231
-              amount:
-                type: number
-                example: 1
-
     Error:
       type: object
       properties:
@@ -216,71 +156,110 @@ components:
       properties:
         key:
           type: string
-          example: app.login.invalidPassword
+          example: general.UNAUTHORIZED.not_found_user
         message:
           type: string
-          example: Invalid user or password
-    ProductRequest:
+          example: Invalid user or password not found
+    RegisterRequest:
+      type: object
+      required:
+        - email
+        - password
+        - user_name
+      properties:
+        email:
+          type: string
+          format: email
+          example: user@example.com
+        password:
+          type: string
+          format: password
+        user_name:
+          type: string
+          example: John Doe
+        google_id:
+          type: string
+          example: 1234567890
+        profile_picture:
+          type: string
+          example: http://example.com/avatar.jpg
+        birthday:
+          type: string
+          format: date
+          example: 1990-01-01
+        phone:
+          type: string
+          example: 123-456-7890
+        address:
+          type: string
+          example: 123 Main St, Anytown, USA
+        auth_provider:
+          type: string
+          enum: [local, google]
+          example: local
+        reset_token:
+          type: string
+          example: abcdef123456
+        reset_token_expiration:
+          type: string
+          format: date-time
+          example: 2024-12-31T23:59:59Z
+        email_verified:
+          type: boolean
+          example: false
+        email_verification_token:
+          type: string
+          example: abcdef123456
+
+    
+    # RegisterRequest:
+    #   type: object
+    #   required:
+    #     - email
+    #     - password
+    #     - user_name
+    #   properties:
+    #     email:
+    #       type: string
+    #       format: email
+    #       example: user@example.com
+    #     password:
+    #       type: string
+    #       format: password
+    #     user_name:
+    #       type: string
+    #       example: John Doe
+    RegisterResponse:
       type: object
       properties:
-        productId:
+        id:
           type: string
-          example: id
-        amount:
-          type: number
-          example: 2
-    DeleteProductRequest:
+          example: 1
+    LoginRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+          example: user@example.com
+        password:
+          type: string
+          format: password
+    TokenResponse:
       type: object
       properties:
-        productId:
+        accessToken:
           type: string
-          example: id
-    CheckoutRequest:
+        refreshToken:
+          type: string
+    UserResponse:
       type: object
       properties:
-        paymentMethod:
+        id:
           type: string
-          example: cash
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-  parameters:
-    id:
-      name: id
-      in: path
-      required: true
-      schema:
-        type: string
-    page:
-      name: page
-      in: query
-      description: Page number
-      schema:
-        type: number
-        default: 1
-    page_size:
-      name: page_size
-      in: query
-      description: Limit the number of results
-      required: false
-      schema:
-        type: integer
-        minimum: 1
-        default: 10
-    sort:
-      name: sort
-      in: query
-      description: Attribute to sort by
-      schema:
-        type: string
-    sort_dir:
-      name: sort_dir
-      in: query
-      description: Sorting direction
-      schema:
-        type: string
-        enum:
-          - ASC
-          - DESC
+        email:
+          type: string
+          format: email
